0032508: Visualization - OpenGl_FrameBuffer::InitWrapper() should not fail on wrapping textured FBO

OpenGl_FrameBuffer::InitWrapper() now reads viewport from GL_VIEWPORT
and doesn't return error on GL_TEXTURE attachments.
OpenGl_FrameBuffer::Release() assertion is now skipped for wrapped FBOs.